# LogiOps

./: .codecull  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: codecull-rebase.yml  codecull-sync.yml
logiops/: checkout.py  config.py  dashboard_ui.py  feature_flags.py  pricing.py  search.py  settings.py
logiops/tests/: test_checkout.py  test_dashboard_ui.py  test_pricing.py  test_search.py  test_settings.py
