[tool.poetry]
name = "logiops"
version = "0.1.0"
description = "LogiOps — internal logistics platform with feature-flagged modules"
authors = ["LogiOps Engineering <engineering@logiops.dev>"]
readme = "README.md"
packages = [{include = "logiops"}]

[tool.poetry.dependencies]
python = "^3.11"
unleashclient = "^6.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["logiops/tests"]
